Added Title and description for search engine.

--- a/PGApp/index.html
+++ b/PGApp/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/images/PG_logo_icon.png" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pynacle Games</title>
+    <title> Pynacle Games </title>
+    <meta name="description" content="Pynacle games — a collection of downloadable Python games featuring unique additions to classic games and an integration of AI algorithms." />
+    <link rel="icon" href="./src/assets/images/PG_logo_icon.png" sizes="any" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Pynacle Games",
+      "url": "https://pynaclegames.org"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
